--- a/.gitignore
+++ b/.gitignore
@@ -102,8 +102,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
-
 # Docusaurus cache and generated files
 .docusaurus
 
@@ -128,5 +126,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-
 config.json
+
+.idea
+*.pdf
