--- a/project.yml
+++ b/project.yml
@@ -6,15 +6,13 @@ packages:
     functions:
       - name: generate-statement
         binary: false
-        main: ""
         runtime: nodejs:18
         web: false
-        triggers:
-          - name: trigger-generate-statement
-            sourceType: scheduler
-            sourceDetails:
-              cron: "1 0 1 * *"
-        webSecure: false
+#        triggers:
+#          - name: trigger-generate-statement
+#            sourceType: scheduler
+#            sourceDetails:
+#              cron: "24 0 30 * *"
         parameters: {}
         environment: {}
         annotations: {}
