--- a/project.yml
+++ b/project.yml
@@ -8,11 +8,11 @@ packages:
         binary: false
         runtime: nodejs:18
 #        web: false
-#        triggers:
-#          - name: trigger-generate-statement
-#            sourceType: scheduler
-#            sourceDetails:
-#              cron: "24 0 30 * *"
+        triggers:
+          - name: trigger-generate-statement
+            sourceType: scheduler
+            sourceDetails:
+              cron: "58 16 4 * *"
         environment:
           MAIL_SUBJECT: "${MAIL_SUBJECT}"
           RECIPIENT_NAME: "${RECIPIENT_NAME}"
